sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:22: error: Invalid literal number
 appliquer l'algorithme de tri par insertion en comparant i-gap et i, puis i-2gap et i-gap, puis i-3gap et i-2gap, etc. 
                                                                             ^AlgShellSort:22: error: Invalid literal number
 appliquer l'algorithme de tri par insertion en comparant i-gap et i, puis i-2gap et i-gap, puis i-3gap et i-2gap, etc. 
                                                                                                   ^AlgShellSort:22: error: Invalid literal number
 appliquer l'algorithme de tri par insertion en comparant i-gap et i, puis i-2gap et i-gap, puis i-3gap et i-2gap, etc. 
                                                                                                             ^AlgShellSort:22: error: identifier expected but symbol literal found.
 appliquer l'algorithme de tri par insertion en comparant i-gap et i, puis i-2gap et i-gap, puis i-3gap et i-2gap, etc. 
            ^